# src/main/java/com/example/forinterviewpracticespringbootalltopicimplementaion/dto/OrderRequestDto.java
@@ -1,14 +1,20 @@
 package com.example.forinterviewpracticespringbootalltopicimplementaion.dto;
 
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
 import java.util.List;
 
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class CreateOrderRequestDTO {
+public class OrderRequestDto {
+    private String orderNumber;
     private Long userId;
     private String status;
-    private String paymentMethod;
     private List<OrderItemDTO> items;
+
+    // Payment info
+    private String paymentMethod;
 }
