# src/main/java/com/example/forinterviewpracticespringbootalltopicimplementaion/entity/Payment.java
@@ -1,0 +1,41 @@
+package com.example.forinterviewpracticespringbootalltopicimplementaion.entity;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+import java.time.LocalDateTime;
+
+@Entity
+@Table(name = "payments")
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class Payment {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @OneToOne
+    @JoinColumn(name = "order_id", nullable = false)
+    private Order order;
+
+    @Column(nullable = false)
+    private Double amount;
+
+    @Column(nullable = false)
+    private String status; // PAID, FAILED, PENDING
+
+    @Column(nullable = false)
+    private String paymentMethod; // CARD, UPI, WALLET etc.
+
+    @Column(name = "created_at", updatable = false)
+    private LocalDateTime createdAt;
+
+    @PrePersist
+    void onCreate() {
+        this.createdAt = LocalDateTime.now();
+    }
+}
